[project]
name = "python-communitation"
version = "0.1.0"
description = ""
authors = [
    {name = "Marek Swakon",email = "marek.j.swakon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "keyboard (>=0.13.5,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
